--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <h2>Daftar Nomor Terpercaya:</h2>
     <ul>
-        <li>(ANDIKA)085173138301</li>
-        <li>(ZON)085609003718</li>
+        <li>(ZON)085173138301</li>
         <li>(ZON)085175108301</li>
+        <li>(DIKA)085609003718</li>
     </ul>
 
     <script src="script.js"></script>
